# DNDSR

./: .clang-tidy  .clang-tidy-fix  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  cmakeCommonUtils.cmake  pyproject.toml  requirements.txt
examples/: CMakeLists.txt  ex_array_basic.cpp  ex_cfv_solver.cpp  ex_geom_mesh.cpp
src/CFV/: BenchmarkFiniteVolume.cpp  BenchmarkFiniteVolume.cu  BenchmarkFiniteVolume.hpp  BenchmarkFiniteVolume_bind.hpp  CMakeLists.txt  DOFFactory.hpp  FiniteVolume.cpp  FiniteVolume.hpp  FiniteVolumeSettings.hpp  FiniteVolume_DeviceView.hpp  FiniteVolume_bind.cpp  FiniteVolume_bind.hpp  Limiters.hpp  ModelEvaluator.cpp  ModelEvaluator.hpp  ModelEvaluator_bind.cpp  ModelEvaluator_bind.hpp  VRDefines.cpp  VRDefines.cu  VRDefines.hpp  VRDefines_bind.hpp  VRSettings.hpp  VariationalReconstruction.cpp  VariationalReconstruction.hpp  VariationalReconstruction_LimiterProcedure.hxx  VariationalReconstruction_Reconstruction.hxx  VariationalReconstruction_bind.cpp  VariationalReconstruction_bind.hpp  __init__.py  cfv_pybind11.cpp  test_FiniteVolume.cpp  test_FiniteVolume.cu  test_FiniteVolume.hpp  test_FiniteVolume_bind.hpp
src/CFV/_explicit_instantiation/: VariationalReconstruction_LimiterProcedure_2_1.cpp  VariationalReconstruction_LimiterProcedure_3_1.cpp  VariationalReconstruction_Reconstruction_2_1.cpp  VariationalReconstruction_Reconstruction_3_1.cpp
src/DNDS/: Array.hpp  ArrayBasic.hpp  ArrayDOF.hpp  ArrayDOFPack.hpp  ArrayDOF_bind.cpp  ArrayDOF_bind.hpp  ArrayDOF_op.hxx  ArrayDOF_op_CUDA.cuh  ArrayPair.hpp  ArrayRedistributor.hpp  ArrayTransformer.hpp  Array_bind.cpp  Array_bind.hpp  CMakeLists.txt  CUDA_Utils.hpp  ConfigEnum.hpp  ConfigParam.hpp  ConfigRegistry.hpp  CsvLog.hpp  Defines.cpp  Defines.hpp  Defines_bind.cpp  Defines_bind.hpp  DeviceStorage.cpp  DeviceStorage.hpp  DeviceStorage.hxx  DeviceStorageHelper.hpp  DeviceStorage_CUDA.cu  DeviceStorage_CUDA.cuh  DeviceStorage_bind.hpp  DeviceTransferable.hpp  DeviceView.hpp  EigenPCH.cpp  EigenPCH.hpp  EigenUtil.hpp  Errors.hpp  Experimentals.hpp  ExprtkPCH.cpp  ExprtkPCH.hpp  ExprtkWrapper.cpp  (+35 more)
src/DNDS/ArrayDOF_bind_cols/: ArrayDOF_bind_n1.cpp  ArrayDOF_bind_n2.cpp  ArrayDOF_bind_n3.cpp  ArrayDOF_bind_n4.cpp  ArrayDOF_bind_n5.cpp  ArrayDOF_bind_n6.cpp  ArrayDOF_bind_n7.cpp  ArrayDOF_bind_n8.cpp  ArrayDOF_bind_nD.cpp  ArrayDOF_bind_nI.cpp
src/DNDS/ArrayDOF_inst/: ArrayDOF_op_1.cpp  ArrayDOF_op_1.cu  ArrayDOF_op_2.cpp  ArrayDOF_op_2.cu  ArrayDOF_op_3.cpp  ArrayDOF_op_3.cu  ArrayDOF_op_4.cpp  ArrayDOF_op_4.cu  ArrayDOF_op_5.cpp  ArrayDOF_op_5.cu  ArrayDOF_op_6.cpp  ArrayDOF_op_6.cu  ArrayDOF_op_7.cpp  ArrayDOF_op_7.cu  ArrayDOF_op_8.cpp  ArrayDOF_op_8.cu  ArrayDOF_op_D.cpp  ArrayDOF_op_D.cu  ArrayDOF_op_I.cpp  ArrayDOF_op_I.cu  _generate_explicit_inst.py
src/DNDS/ArrayDerived/: AdjacencyRow.hpp  ArrayAdjacency.hpp  ArrayAdjacency_DeviceView.hpp  ArrayAdjacency_bind.cpp  ArrayAdjacency_bind.hpp  ArrayEigenMatirx.hpp  ArrayEigenMatrix.hpp  ArrayEigenMatrixBatch.hpp  ArrayEigenMatrixBatch_DeviceView.hpp  ArrayEigenMatrixBatch_bind.hpp  ArrayEigenMatrix_DeviceView.hpp  ArrayEigenMatrix_bind.cpp  ArrayEigenMatrix_bind.hpp  ArrayEigenUniMatrixBatch.hpp  ArrayEigenUniMatrixBatch_DeviceView.hpp  ArrayEigenUniMatrixBatch_bind.cpp  ArrayEigenUniMatrixBatch_bind.hpp  ArrayEigenVector.hpp  ArrayEigenVector_DeviceView.hpp  ArrayEigenVector_bind.cpp  ArrayEigenVector_bind.hpp
src/DNDS/Array_bind_offset/: Array_bind_1.cpp  Array_bind_2.cpp  Array_bind_3.cpp  Array_bind_4.cpp  Array_bind_5.cpp  Array_bind_6.cpp  Array_bind_7.cpp  Array_bind_x.hxx
src/DNDS/Config/: ConfigEnum.hpp  ConfigParam.hpp  ConfigRegistry.hpp
src/DNDS/CppUtils/: ScopedValueAlternator.hpp
src/DNDS/Device/: CUDA_Utils.hpp  DeviceStorage.cpp  DeviceStorage.hpp  DeviceStorageHelper.hpp  DeviceStorage_CUDA.cu  DeviceStorage_CUDA.cuh  DeviceStorage_bind.hpp  DeviceTransferable.hpp  DeviceView.hpp
src/DNDS/Serializer/: HDF5.hpp  JsonUtil.hpp  SerializerBase.hpp  SerializerFactory.hpp  SerializerH5.cpp  SerializerH5.hpp  SerializerJSON.cpp  SerializerJSON.hpp  Serializer_bind.hpp
src/EulerP/: CMakeLists.txt  EulerP.hpp  EulerP_ARS.hpp  EulerP_BC.cpp  EulerP_BC.cu  EulerP_BC.hpp  EulerP_BC_bind.hpp  EulerP_Evaluator.cpp  EulerP_Evaluator.hpp  EulerP_Evaluator_bind.hpp  EulerP_Evaluator_impl.cpp  EulerP_Evaluator_impl.cu  EulerP_Evaluator_impl.hpp  EulerP_Evaluator_impl_common.hxx  EulerP_Evaluator_impl_utils.hpp  EulerP_Physics.hpp  EulerP_Physics_bind.hpp  EulerP_Solver.py  __init__.py  eulerP_pybind11.cpp
src/Geom/: AdjIndexInfo.hpp  BaseFunction.hpp  BoundaryCondition.hpp  Boundary_bind.hpp  CGNS.hpp  CMakeLists.txt  CorrectRCM.hpp  DiffTensors.hpp  EigenTensor.hpp  ElemEnum.hpp  ElementTraits.hpp  ElementTraitsBase.hpp  Elements.cpp  Elements.hpp  Elements_bind.cpp  Elements_bind.hpp  Geometric.hpp  Mesh.cpp  Mesh.cu  Mesh.hpp  MeshConnectivity.cpp  MeshConnectivity.hpp  MeshConnectivity_Ghost.cpp  MeshConnectivity_Interpolate.cpp  MeshConnectivity_StateChecked.hpp  Mesh_DeviceView.hpp  Mesh_Elevation.cpp  Mesh_Elevation_SmoothHelpers.hpp  Mesh_Elevation_SmoothSolver.cpp  Mesh_Elevation_SmoothV2.cpp  Mesh_InterpolateHelpers.hpp  Mesh_Legacy.cpp  Mesh_PartitionHelpers.hpp  Mesh_Plts.cpp  Mesh_ReadSerializeDistributed.cpp  Mesh_Serial_BuildCell2Cell.cpp  Mesh_Serial_Partition.cpp  Mesh_Serial_ReadFromCGNS.cpp  Mesh_WallDist.cpp  Mesh_bind.hpp  (+14 more)
src/Geom/Elements/: Hex27.hpp  Hex8.hpp  Line2.hpp  Line3.hpp  Prism18.hpp  Prism6.hpp  Pyramid14.hpp  Pyramid5.hpp  Quad4.hpp  Quad9.hpp  Tet10.hpp  Tet4.hpp  Tri3.hpp  Tri6.hpp
src/Geom/Mesh/: AdjIndexInfo.hpp  AdjPairTracked_bind.hpp  AdjWithState_bind.hpp  CorrectRCM.hpp  Mesh.cpp  Mesh.cu  Mesh.hpp  MeshConnectivity.cpp  MeshConnectivity.hpp  MeshConnectivity_Ghost.cpp  MeshConnectivity_Interpolate.cpp  MeshConnectivity_Interpolate.hxx  MeshConnectivity_StateChecked.hpp  Mesh_CellPermutation.hpp  Mesh_DeviceView.hpp  Mesh_Elevation.cpp  Mesh_Elevation_SmoothHelpers.hpp  Mesh_Elevation_SmoothV2.cpp  (+15 more)
test/cpp/: CMakeLists.txt
(+472 files in other folders)
