# usage:
# CC=/usr/bin/gcc CXX=/usr/bin/g++ CMAKE_BUILD_PARALLEL_LEVEL=16 pip install . --verbose

# editable: 
# CC=/usr/bin/gcc CXX=/usr/bin/g++ CMAKE_BUILD_PARALLEL_LEVEL=16 pip install -e . --verbose
# update cpp only:
# cmake --build .  -t dnds_pybind11 geom_pybind11 cfv_pybind11 -j32 && cmake --install .


[build-system]
requires = [
    "scikit-build-core>=0.3.3",
    "pybind11",
    "pybind11-stubgen",
    "typing_extensions",
    "numpy",
    "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "DNDSR"
version = "0.0.0"


[tool.scikit-build]
cmake.minimum-version = "3.21"
cmake.build-type = "Release"
build.targets = ["dnds_pybind11", "geom_pybind11", "cfv_pybind11"]
build.verbose = true
build-dir = "build_py"
cmake.args = ["-G Ninja"]
build.tool-args = ["-j0"]
sdist.include = [
    "src/*/*.pyi",
    "src/*/_internal/*.so",
    "src/*/_internal/*.dylib",
    "src/*/_internal/*.pyd",
] # append to .gitignore rules

[tool.scikit-build.wheel.packages]
"DNDSR/DNDS" = "src/DNDS"
"DNDSR/DNDS/_internal" = "src/DNDS/_internal"
"DNDSR/Geom" = "src/Geom"
"DNDSR/Geom/_internal" = "src/Geom/_internal"